# SeedRelay

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  README_CN.md  compose.yml  docker-compose.yml
.github/workflows/: release-binaries.yml  release-image.yml
src/: audio.rs  cli.rs  client.rs  config.rs  credentials.rs  env_file.rs  lib.rs  main.rs  protocol.rs  realtime.rs  response.rs  server.rs  web.rs
tests/: audio_tests.rs  cli_tests.rs  client_tests.rs  config_tests.rs  credentials_tests.rs  docker_tests.rs  protocol_tests.rs  realtime_tests.rs  response_tests.rs  web_tests.rs
web/: app.js  font.css  index.html  styles.css
