[package]
name = "seedrelay"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "seedrelay"
path = "src/lib.rs"

[[bin]]
name = "seedrelay"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
hex = "0.4"
md5 = "0.8"
opus = "0.3"
prost = "0.14"
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
